docs(docsearch): fix alignment and styling

--- a/docs/source/stylesheets/components/_navigation.scss
+++ b/docs/source/stylesheets/components/_navigation.scss
@@ -1,7 +1,7 @@
 .navigation {
   position: fixed;
   width: 100%;
-  height: 50px;
+  height: 52px;
   background: $black;
   z-index: 101;
   color: #fff;
@@ -26,10 +26,11 @@
     margin-right: 12px;
     border-right: #FF2E6C 2px solid;
     padding-left: 8px;
+    padding-bottom: 4px;
 
     img {
       position: relative;
-      top: 7px;
+      top: 10px;
       width: 200px;
       margin-right: 6px;
 
@@ -44,7 +45,7 @@
     font-size: 1.2em;
     font-weight: bold;
     position: relative;
-    top: -2px;
+    top: 0px;
 
     &:hover, &:active, &:focus {
       color: white;
@@ -57,10 +58,8 @@
   }
 
   .menu svg {
-    position: relative;
     width: 28px;
     height: 36px;
-    top: -2px;
     display: inline-block;
     vertical-align: middle;
   }
@@ -84,7 +83,7 @@
 
       &.active {
         a {
-          padding-bottom: 14px;
+          padding-bottom: 4px;
           border-bottom: 2px solid $red-pink;
         }
       }
