--- a/docs/source/stylesheets/components/docsearch/_docsearch.scss
+++ b/docs/source/stylesheets/components/docsearch/_docsearch.scss
@@ -4,18 +4,16 @@ $searchbox-config: (
 	input-height: 36px,
 	border-width: 2px,
 	border-radius: 18px,
-	input-border-color: #10455F,
-	input-focus-border-color: #46AEDA,
+	input-border-color: rgba(#1D95C6,.5),
+	input-focus-border-color: #1D95C6,
 	input-background: #000,
-	input-focus-background: #FFFFFF,
 	font-size: 12px,
 	placeholder-color: #777,
-	icon-size: 16px,
+	icon-size: 18px,
 	icon-position: left,
-	icon-color: #03AED9,
-	icon-background: #458EE1,
+	icon-color: #1D95C6,
 	icon-background-opacity: 0,
-	icon-clear-size: 8px
+	icon-clear-size: 12px
 ) !default;
 
 // DROPDOWN
