--- a/docs/source/stylesheets/components/docsearch/_searchbox.scss
+++ b/docs/source/stylesheets/components/docsearch/_searchbox.scss
@@ -44,6 +44,7 @@
     white-space: nowrap;
     box-sizing: border-box;
     visibility: visible!important;
+    vertical-align: middle;
 
     &__wrapper {
       width: 100%;
@@ -171,8 +172,7 @@
       padding: 0;
       font-size: inherit;
       user-select: none;
-      fill: rgba(#000, .5);
-      color: #46AEDA;
+      fill: rgba(#46AEDA, .5);
 
       &.hide {
         display: none;
